注文表示の変更

--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
 						Casher
 					</ons-list-item>
 					<ons-list-item onclick="fn.load('html/ProductManagement/PM_main.html')" tappable>
-						Ï商品管理画面
+						商品管理画面
 					</ons-list-item>
 
 					<ons-list-item onclick="fn.load('html/OrderDisplay/OD_main.html')" tappable>
