renamed ids and name of files

--- a/www/html/Casher/CA_main.html
+++ b/www/html/Casher/CA_main.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<ons-page id="Casher" style="height: 100%;">
+<ons-page id="CA_main" style="height: 100%;">
 	<ons-toolbar>
 		<div class="left">
 			<ons-toolbar-button onclick="fn.open()">
