--- a/www/html/OrderDisplay/OD_dialog.html
+++ b/www/html/OrderDisplay/OD_dialog.html
@@ -1,32 +1,32 @@
 <!-- html/OrderDisplay/OD_dialog.html -->
 <ons-alert-dialog id="OD_dialog" cancelable animation="none">
 
-  <div id="PM_addPE_Title" class="alert-dialog-title">商品追加画面</div>
+  <div id="PM_addPE_Title" class="alert-dialog-title">個数選択画面</div>
 
   <ons-list>
     <ons-list-header>商品個数の選択</ons-list-header>
     <ons-list-item modifier="nodivider">
       <div class="center">
-        <ons-button id="PM_deleteButton" onclick="deleteGoods('PM_dialog')">　　 1 　　</ons-button>
+        <ons-button id="ODbutton_1" onclick="getButtonID(this.id)">　　 1 　　</ons-button>
       </div>
       <div class="right">
-        <ons-button onclick="saveGoods('PM_dialog')" id="PM_addButton">　　 2 　　</ons-button>
+        <ons-button id="ODbutton_2" onclick="getButtonID(this.id)">　　 2 　　</ons-button>
       </div>
     </ons-list-item>
     <ons-list-item modifier="nodivider">
       <div class="center">
-        <ons-button id="PM_deleteButton" onclick="deleteGoods('PM_dialog')">　　 3 　　</ons-button>
+        <ons-button id="ODbutton_3" onclick="getButtonID(this.id)">　　 3 　　</ons-button>
       </div>
       <div class="right">
-        <ons-button onclick="saveGoods('PM_dialog')" id="PM_addButton">　　 4 　　</ons-button>
+        <ons-button id="ODbutton_4" onclick="getButtonID(this.id)">　　 4 　　</ons-button>
       </div>
     </ons-list-item>
     <ons-list-item>
       <div class="center">
-        <ons-button id="PM_deleteButton" onclick="deleteGoods('PM_dialog')">　　 5 　　</ons-button>
+        <ons-button id="ODbutton_5" onclick="getButtonID(this.id)">　　 5 　　</ons-button>
       </div>
       <div class="right">
-        <ons-button onclick="saveGoods('PM_dialog')" id="PM_addButton">　　 6 　　</ons-button>
+        <ons-button id="ODbutton_6" onclick="getButtonID(this.id)">　　 6 　　</ons-button>
       </div>
     </ons-list-item>
     <ons-list-header>キーボードによる個数入力</ons-list-header>
