--- a/www/html/OrderDisplay/OD_dialog.html
+++ b/www/html/OrderDisplay/OD_dialog.html
@@ -7,33 +7,33 @@
     <ons-list-header>商品個数の選択</ons-list-header>
     <ons-list-item modifier="nodivider">
       <div class="center">
-        <ons-button id="ODbutton_1" onclick="getButtonID(this.id)">　　 1 　　</ons-button>
+        <ons-button id="ODbutton_1" onclick="OD_selectNum(this.id)">　　 1 　　</ons-button>
       </div>
       <div class="right">
-        <ons-button id="ODbutton_2" onclick="getButtonID(this.id)">　　 2 　　</ons-button>
+        <ons-button id="ODbutton_2" onclick="OD_selectNum(this.id)">　　 2 　　</ons-button>
       </div>
     </ons-list-item>
     <ons-list-item modifier="nodivider">
       <div class="center">
-        <ons-button id="ODbutton_3" onclick="getButtonID(this.id)">　　 3 　　</ons-button>
+        <ons-button id="ODbutton_3" onclick="OD_selectNum(this.id)">　　 3 　　</ons-button>
       </div>
       <div class="right">
-        <ons-button id="ODbutton_4" onclick="getButtonID(this.id)">　　 4 　　</ons-button>
+        <ons-button id="ODbutton_4" onclick="OD_selectNum(this.id)">　　 4 　　</ons-button>
       </div>
     </ons-list-item>
     <ons-list-item>
       <div class="center">
-        <ons-button id="ODbutton_5" onclick="getButtonID(this.id)">　　 5 　　</ons-button>
+        <ons-button id="ODbutton_5" onclick="OD_selectNum(this.id)">　　 5 　　</ons-button>
       </div>
       <div class="right">
-        <ons-button id="ODbutton_6" onclick="getButtonID(this.id)">　　 6 　　</ons-button>
+        <ons-button id="ODbutton_6" onclick="OD_selectNum(this.id)">　　 6 　　</ons-button>
       </div>
     </ons-list-item>
     <ons-list-header>キーボードによる個数入力</ons-list-header>
     <ons-list-item >
-      <input type="number" id="PM_textbox_2" class="text-input" placeholder="個数">
+      <input type="number" id="OD_textbox" class="text-input" placeholder="個数">
       <div class="right">
-        <ons-button onclick="saveGoods('PM_dialog')" id="PM_addButton" class="coler_back_red">決定</ons-button>
+        <ons-button onclick="OD_selectNum('textbox_1')" class="coler_back_red">決定</ons-button>
       </div>
     </ons-list-item>
     <!-- <ons-list-item>
