--- a/www/index.html
+++ b/www/index.html
@@ -12,12 +12,13 @@
 	<script src="index.js"></script>
 	<script src="js/ncmb.js"></script>
 	<script src="js/Home/Home.js"></script>
-	<script src="js/Casher/CA_main.js"></script>
+	<script src="js/Casher/Casher.js"></script>
 
 	<!-- 追記部分 -->
 	<script src="js/ProductManagement/PM_main.js"></script>
 	<script src="js/ProductManagement/PM_dialog.js"></script>
 	<script src="js/OrderDisplay/OD_main.js"></script>
+  <script src="js/OrderDisplay/OD_dialog.js"></script>
 
 	<link rel="stylesheet" href="css/ProductManagement.css">
 	<link rel="stylesheet" href="css/OrderDisplay.css">
@@ -37,7 +38,7 @@
 					<ons-list-item onclick="fn.load('html/Home/Home.html')" tappable>
 						Home
 					</ons-list-item>
-					<ons-list-item onclick="fn.load('html/Casher/CA_main.html')" tappable>
+					<ons-list-item onclick="fn.load('html/Casher/Casher.html')" tappable>
 						Casher
 					</ons-list-item>
 					<ons-list-item onclick="fn.load('html/ProductManagement/PM_main.html')" tappable>
