--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,8 @@
 	<script src="index.js"></script>
 	<script src="js/ncmb.js"></script>
 	<script src="js/Home/Home.js"></script>
-	<script src="js/Casher/Casher.js"></script>
+	<script src="js/Casher/CA_main.js"></script>
+	<script src="js/Casher/CA_dialog.js"></script>
 
 	<!-- 追記部分 -->
 	<script src="js/ProductManagement/PM_main.js"></script>
@@ -38,7 +39,7 @@
 					<ons-list-item onclick="fn.load('html/Home/Home.html')" tappable>
 						Home
 					</ons-list-item>
-					<ons-list-item onclick="fn.load('html/Casher/Casher.html')" tappable>
+					<ons-list-item onclick="fn.load('html/Casher/CA_main.html')" tappable>
 						Casher
 					</ons-list-item>
 					<ons-list-item onclick="fn.load('html/ProductManagement/PM_main.html')" tappable>
