✨ロゴの作成

--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,19 @@
 		<ons-splitter-side id="menu" side="left" width="220px" collapse swipeable>
 			<ons-page>
 				<ons-list>
+          <ons-list-item>
+            <div class="left">
+              <img class="list-item__thumbnail" src="image/RKS_ic.png">
+            </div>
+            <div class="center">
+              <strong>
+                RKかたつむり
+              </strong>
+            </div>
+          </ons-list-item>
+          <ons-list-item class="coler_back_red" style="color:white">
+            会計モード
+          </ons-list-item>
 					<ons-list-item onclick="fn.load('html/Home/Home.html')" tappable>
             <div class="left">
               <img class="list-item__thumbnail" src="image/Home.png">
@@ -69,6 +82,7 @@
             </div>
 					</ons-list-item>
 				</ons-list>
+        <ons-button>厨房モード</ons-button>
 			</ons-page>
 		</ons-splitter-side>
 		<ons-splitter-content id="content" page="html/Home/Home.html">
