--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,14 @@
             </div>
           </ons-list-item>
           <ons-list-item class="coler_back_red" style="color:white">
-            会計モード
+            <div class="left">
+              <img class="list-item__thumbnail" src="image/Rezi.png">
+            </div>
+            <div class="center">
+              <strong>
+                会計モード
+              </strong>
+            </div>
           </ons-list-item>
 					<ons-list-item onclick="fn.load('html/Home/Home.html')" tappable>
             <div class="left">
