✨[DB] 商品番号リストから商品名リストへの変換関数

--- a/www/html/Home/Home.html
+++ b/www/html/Home/Home.html
@@ -14,7 +14,7 @@
     RKかたつむり
   </p>
   <ons-row>
-    <ons-button onclick="fn.load('html/Casher/Casher.html')">Casher</ons-button>
+    <ons-button onclick="fn.load('html/Casher/CA_main.html')">Casher</ons-button>
 
     <ons-button onclick="fn.load('html/ProductManagement/PM_main.html')">ProductManagement</ons-button>
 
