--- a/www/html/Casher/CA_dialog.html
+++ b/www/html/Casher/CA_dialog.html
@@ -1,11 +1,40 @@
-<ons-dialog id="CA_dialog" cancelable>
-	<div style="text-align: center; padding: 10px;">
-		<p>
-			This is a simple dialog!
-		</p>
+<!-- html/Casher/CA_dialog.html -->
+<ons-alert-dialog id="CA_dialog" cancelable>
 
-		<p>
-			<ons-button onclick="hideDialog('CA_dialog')">Close</ons-button>
-		</p>
-	</div>
-</ons-dialog>
+	<div id="CA_addPE_Title" class="alert-dialog-title">個数選択画面</div>
+  
+	<ons-list>
+	  <ons-list-header>商品個数の選択</ons-list-header>
+	  <ons-list-item modifier="nodivider">
+		<div class="center">
+		  <ons-button id="CAbutton_1" >　　 1 　　</ons-button>
+		</div>
+		<div class="right">
+		  <ons-button id="CAbutton_2" >　　 2 　　</ons-button>
+		</div>
+	  </ons-list-item>
+	  <ons-list-item modifier="nodivider">
+		<div class="center">
+		  <ons-button id="CAbutton_3" >　　 3 　　</ons-button>
+		</div>
+		<div class="right">
+		  <ons-button id="CAbutton_4" >　　 4 　　</ons-button>
+		</div>
+	  </ons-list-item>
+	  <ons-list-item>
+		<div class="center">
+		  <ons-button id="CAbutton_5" >　　 5 　　</ons-button>
+		</div>
+		<div class="right">
+		  <ons-button id="CAbutton_6" >　　 6 　　</ons-button>
+		</div>
+	  </ons-list-item>
+	  <ons-list-header>キーボードによる個数入力</ons-list-header>
+	  <ons-list-item >
+		<input type="number" id="CA_textbox" class="text-input" placeholder="個数">
+		<div class="right">
+		  <ons-button class="coler_back_red" onclick="CA_selectNum()">決定</ons-button>
+		</div>
+	  </ons-list-item>
+	</ons-list>
+  </ons-alert-dialog>
