🐛[index] js読み込み行の修正

--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,8 @@
 	<script src="index.js"></script>
 	<script src="js/ncmb.js"></script>
 	<script src="js/Home/Home.js"></script>
-	<script src="js/Casher/Casher.js"></script>
+	<script src="js/Casher/CA_main.js"></script>
+	<script src="js/Casher/CA_dialog.js"></script>
 
 	<!-- 追記部分 -->
 	<script src="js/ProductManagement/PM_main.js"></script>
