--- a/www/html/Casher/CA_dialog.html
+++ b/www/html/Casher/CA_dialog.html
@@ -7,33 +7,33 @@
 	  <ons-list-header>商品個数の選択</ons-list-header>
 	  <ons-list-item modifier="nodivider">
 		<div class="center">
-		  <ons-button id="CAbutton_1" >　　 1 　　</ons-button>
+		  <ons-button id="CA_button_1" onclick="CA_selectNum(this.id)">　　 1 　　</ons-button>
 		</div>
 		<div class="right">
-		  <ons-button id="CAbutton_2" >　　 2 　　</ons-button>
+		  <ons-button id="CA_button_2" onclick="CA_selectNum(this.id)">　　 2 　　</ons-button>
 		</div>
 	  </ons-list-item>
 	  <ons-list-item modifier="nodivider">
 		<div class="center">
-		  <ons-button id="CAbutton_3" >　　 3 　　</ons-button>
+		  <ons-button id="CA_button_3" onclick="CA_selectNum(this.id)">　　 3 　　</ons-button>
 		</div>
 		<div class="right">
-		  <ons-button id="CAbutton_4" >　　 4 　　</ons-button>
+		  <ons-button id="CA_button_4" onclick="CA_selectNum(this.id)">　　 4 　　</ons-button>
 		</div>
 	  </ons-list-item>
 	  <ons-list-item>
 		<div class="center">
-		  <ons-button id="CAbutton_5" >　　 5 　　</ons-button>
+		  <ons-button id="CA_button_5" onclick="CA_selectNum(this.id)">　　 5 　　</ons-button>
 		</div>
 		<div class="right">
-		  <ons-button id="CAbutton_6" >　　 6 　　</ons-button>
+		  <ons-button id="CA_button_6" onclick="CA_selectNum(this.id)">　　 6 　　</ons-button>
 		</div>
 	  </ons-list-item>
 	  <ons-list-header>キーボードによる個数入力</ons-list-header>
 	  <ons-list-item >
 		<input type="number" id="CA_textbox" class="text-input" placeholder="個数">
 		<div class="right">
-		  <ons-button class="coler_back_red" onclick="CA_selectNum()">決定</ons-button>
+		  <ons-button class="coler_back_red" onclick="CA_selectNum(&quot;CA_textbox&quot;)">決定</ons-button>
 		</div>
 	  </ons-list-item>
 	</ons-list>
