✨ホームの変更

--- a/www/html/Home/Home.html
+++ b/www/html/Home/Home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<ons-page id="Home">
+<ons-page id="Home" class="hero" style="height: 100%;">
   <ons-toolbar>
     <div class="left">
       <ons-toolbar-button onclick="fn.open()">
@@ -10,15 +10,25 @@
       Home
     </div>
   </ons-toolbar>
-  <p style="text-align: center; opacity: 0.6; padding-top: 20px;">
-    RKかたつむり
-  </p>
-  <ons-row>
-    <ons-button onclick="fn.load('html/Casher/CA_main.html')">Casher</ons-button>
+  <div class="hero"></div>
+  <!-- <br>
+  <ons-row style="height: 100%;">
+    <div id="H_button">
+      <ons-button class="H_button_1" type="margin-bottom: auto">
+        <font size="20">
+          <strong>
+            会計モード
+          </strong>
+        </font>
+      </ons-button>
+      <ons-button class="H_button_1">厨房モード</ons-button> -->
+    <!-- </div> -->
+
+    <!-- <ons-button onclick="fn.load('html/Casher/CA_main.html')">Casher</ons-button>
 
     <ons-button onclick="fn.load('html/ProductManagement/PM_main.html')">ProductManagement</ons-button>
 
-    <ons-button onclick="fn.load('html/OrderDisplay/OD_main.html')">OrderDisplay</ons-button>
+    <ons-button onclick="fn.load('html/OrderDisplay/OD_main.html')">OrderDisplay</ons-button> -->
     <!-- <ons-button onclick="fn.load('about.html')">厨房モード</ons-button> -->
-  </ons-row>
+  <!-- </ons-row> -->
 </ons-page>
