--- a/www/index.html
+++ b/www/index.html
@@ -55,7 +55,7 @@
               </strong>
             </div>
           </ons-list-item>
-					<ons-list-item onclick="fn.load('html/Home/Home.html')" tappable>
+					<ons-list-item onclick="fn.load('html/Home/Home.html')" modifier="chevron" tappable>
             <div class="left">
               <img class="list-item__thumbnail" src="image/Home.png">
             </div>
@@ -63,7 +63,7 @@
               Home
             </div>
 					</ons-list-item>
-					<ons-list-item onclick="fn.load('html/Casher/Casher.html')" tappable>
+					<ons-list-item onclick="fn.load('html/Casher/Casher.html')" modifier="chevron" tappable>
             <div class="left">
               <img class="list-item__thumbnail" src="image/Casher.png">
             </div>
@@ -71,7 +71,7 @@
               Casher
             </div>
 					</ons-list-item>
-					<ons-list-item onclick="fn.load('html/ProductManagement/PM_main.html')" tappable>
+					<ons-list-item onclick="fn.load('html/ProductManagement/PM_main.html')" modifier="chevron" tappable>
             <div class="left">
               <img class="list-item__thumbnail" src="image/ProductManagement.png">
             </div>
@@ -80,7 +80,7 @@
             </div>
 					</ons-list-item>
 
-					<ons-list-item onclick="fn.load('html/OrderDisplay/OD_main.html')" tappable>
+					<ons-list-item onclick="fn.load('html/OrderDisplay/OD_main.html')" modifier="chevron" tappable>
             <div class="left">
               <img class="list-item__thumbnail" src="image/Galley.png">
             </div>
