:sparkles: Home画面の変更

--- a/www/html/Home/Home.html
+++ b/www/html/Home/Home.html
@@ -10,19 +10,23 @@
       Home
     </div>
   </ons-toolbar>
-  <div class="hero"></div>
-  <!-- <br>
-  <ons-row style="height: 100%;">
-    <div id="H_button">
-      <ons-button class="H_button_1" type="margin-bottom: auto">
-        <font size="20">
-          <strong>
-            会計モード
-          </strong>
-        </font>
+  <div class="background"></div>
+  <img src="/image/RKS.png" class="title">
+  <ons-row">
+    <div class="H_buttons">
+      <ons-button modifier="large" class="H_button_1" class="coler_back_red">
+        <strong>
+          会計モード
+        </strong>
       </ons-button>
-      <ons-button class="H_button_1">厨房モード</ons-button> -->
-    <!-- </div> -->
+      <br>
+      <br>
+      <ons-button modifier="large" class="H_button_2">
+        <strong>
+          厨房モード
+        </strong>
+      </ons-button>
+    </div>
 
     <!-- <ons-button onclick="fn.load('html/Casher/CA_main.html')">Casher</ons-button>
 
@@ -30,5 +34,5 @@
 
     <ons-button onclick="fn.load('html/OrderDisplay/OD_main.html')">OrderDisplay</ons-button> -->
     <!-- <ons-button onclick="fn.load('about.html')">厨房モード</ons-button> -->
-  <!-- </ons-row> -->
+    </ons-row>
 </ons-page>
