--- a/www/html/Home/Home.html
+++ b/www/html/Home/Home.html
@@ -14,14 +14,14 @@
   <img src="/image/RKS.png" class="title">
   <ons-row">
     <div class="H_buttons">
-      <ons-button modifier="large" class="H_button_1" class="coler_back_red">
+      <ons-button modifier="large" class="H_button_1" class="coler_back_red" onclick="fn.load('html/Casher/CA_main.html')">
         <strong>
           会計モード
         </strong>
       </ons-button>
       <br>
       <br>
-      <ons-button modifier="large" class="H_button_2">
+      <ons-button modifier="large" class="H_button_2" onclick="fn.load('html/OrderDisplay/OD_main.html')">
         <strong>
           厨房モード
         </strong>
