✨サイドバーの一部変更

--- a/www/html/Home/Home.html
+++ b/www/html/Home/Home.html
@@ -7,40 +7,15 @@
     </div>
     <div class="center">
       Home
-    </div>
-
-    
+    </div>  
   </ons-toolbar>
   <div class="background"></div>
   <img src="/image/RKS.png" class="title">
-  <ons-row">
-    <button img="/image/CasherButton.png"></button>
-    <!-- <img src="/image/CasherButton.png" class="button"> -->
+  <ons-row>
     <div class="container">
       <input type="image" class="image" src="image/CasherButton.png" onclick="fn.load('html/Casher/CA_main.html')">
       <span style="margin-right: 2em;"></span>
       <input type="image" class="image" src="image/GalleyButton.png" onclick="fn.load('html/OrderDisplay/OD_main.html')">
     </div>
-    <!-- <div class="H_buttons">
-      <ons-button modifier="large" class="H_button_1" class="coler_back_red" onclick="fn.load('html/Casher/CA_main.html')">
-        <strong>
-          会計モード
-        </strong>
-      </ons-button>
-      <br>
-      <br>
-      <ons-button modifier="large" class="H_button_2" onclick="fn.load('html/OrderDisplay/OD_main.html')">
-        <strong>
-          厨房モード
-        </strong>
-      </ons-button> -->
-    </div>
-
-    <!-- <ons-button onclick="fn.load('html/Casher/CA_main.html')">Casher</ons-button>
-
-    <ons-button onclick="fn.load('html/ProductManagement/PM_main.html')">ProductManagement</ons-button>
-
-    <ons-button onclick="fn.load('html/OrderDisplay/OD_main.html')">OrderDisplay</ons-button> -->
-    <!-- <ons-button onclick="fn.load('about.html')">厨房モード</ons-button> -->
-    </ons-row>
+  </ons-row>
 </ons-page>
