--- a/www/index.html
+++ b/www/index.html
@@ -80,7 +80,14 @@
               商品管理
             </div>
 					</ons-list-item>
-
+          <ons-list-item onclick="fn.load('html/OrderLog/OL_main.html')" modifier="chevron" tappable>
+            <div class="left">
+              <img class="list-item__thumbnail" src="image/OrderLog.png">
+            </div>
+            <div class="center">
+              商品履歴
+            </div>
+					</ons-list-item>
 					<ons-list-item onclick="fn.load('html/OrderDisplay/OD_main.html')" modifier="chevron" tappable>
             <div class="left">
               <img class="list-item__thumbnail" src="image/Galley.png">
