✨[CA]個数編集・座席番号選択・DBへのプッシュ
[工事中]商品編集

--- a/www/html/Casher/CA_dialog2.html
+++ b/www/html/Casher/CA_dialog2.html
@@ -1,34 +1,44 @@
-<!-- html/Casher/CA_dialog.html -->
-<ons-alert-dialog id="CA_dialog" cancelable>
+<!-- html/Casher/CA_dialog2.html -->
+<ons-alert-dialog id="CA_dialog2" cancelable>
 
-	<div class="alert-dialog-title">座席選択画面</div>
+	<div id="CA_addPE_Title" class="alert-dialog-title">座席選択画面</div>
   
 	<ons-list>
-	  <ons-list-header>席の選択</ons-list-header>
+	  <ons-list-header>座席の選択</ons-list-header>
 	  <ons-list-item modifier="nodivider">
 		<div class="center">
-		  <ons-button id="CA_button_1" onclick="CA_selectNum(this.id)">　　 1 　　</ons-button>
+		  <ons-button id="CA_button_1" onclick="CA_selectSeat(this.id)">　　 1 　　</ons-button>
 		</div>
 		<div class="right">
-		  <ons-button id="CA_button_2" onclick="CA_selectNum(this.id)">　　 2 　　</ons-button>
+		  <ons-button id="CA_button_2" onclick="CA_selectSeat(this.id)">　　 2 　　</ons-button>
 		</div>
 	  </ons-list-item>
 	  <ons-list-item modifier="nodivider">
 		<div class="center">
-		  <ons-button id="CA_button_3" onclick="CA_selectNum(this.id)">　　 3 　　</ons-button>
+		  <ons-button id="CA_button_3" onclick="CA_selectSeat(this.id)">　　 3 　　</ons-button>
 		</div>
 		<div class="right">
-		  <ons-button id="CA_button_4" onclick="CA_selectNum(this.id)">　　 4 　　</ons-button>
+		  <ons-button id="CA_button_4" onclick="CA_selectSeat(this.id)">　　 4 　　</ons-button>
 		</div>
 	  </ons-list-item>
 	  <ons-list-item>
 		<div class="center">
-		  <ons-button id="CA_button_5" onclick="CA_selectNum(this.id)">　　 5 　　</ons-button>
+		  <ons-button id="CA_button_5" onclick="CA_selectSeat(this.id)">　　 5 　　</ons-button>
 		</div>
 		<div class="right">
-		  <ons-button id="CA_button_6" onclick="CA_selectNum(this.id)">　　 6 　　</ons-button>
+		  <ons-button id="CA_button_6" onclick="CA_selectSeat(this.id)">　　 6 　　</ons-button>
 		</div>
-		<ons-button id="CA_takeout" onclick="CA_selectNum(this.id)" class="center">持ち帰り</ons-button>
+	  </ons-list-item>
+	  <ons-list-header>キーボードによる入力</ons-list-header>
+	  <ons-list-item>
+		<input type="number" id="CA_textbox" class="text-input" placeholder="席番号">
+		<div class="right">
+		  <ons-button class="coler_back_red" onclick="CA_selectSeat(&quot;CA_textbox&quot;)">決定</ons-button>
+		</div>
+	  </ons-list-item>
+	  <ons-list-header>お持ち帰り</ons-list-header>
+	  <ons-list-item>
+		<ons-button id="CA_button_-1" onclick="CA_selectSeat(this.id)">お持ち帰り</ons-button>
 	  </ons-list-item>
 	</ons-list>
   </ons-alert-dialog>
