--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
 	<script src="js/Home/Home.js"></script>
 	<script src="js/Casher/CA_main.js"></script>
 	<script src="js/Casher/CA_dialog.js"></script>
+	<script src="js/Casher/CA_dialog2.js"></script>
 
 	<!-- 追記部分 -->
 	<script src="js/ProductManagement/PM_main.js"></script>
