--- a/www/index.html
+++ b/www/index.html
@@ -16,10 +16,11 @@
 	<script src="js/Casher/CA_dialog.js"></script>
 
 	<!-- 追記部分 -->
-	<script src="js/ProductManagement/PM_main.js"></script>
+	<!-- <script src="js/ProductManagement/PM_main.js"></script> -->
 	<script src="js/ProductManagement/PM_dialog.js"></script>
-	<script src="js/OrderDisplay/OD_main.js"></script>
+	<!-- <script src="js/OrderDisplay/OD_main.js"></script> -->
   <script src="js/OrderDisplay/OD_dialog.js"></script>
+  <script src="js/OrderLog/OL_main.js"></script>
 
 	<link rel="stylesheet" href="css/ProductManagement.css">
 	<link rel="stylesheet" href="css/OrderDisplay.css">
