--- a/www/html/ProductManagement/PM_main.html
+++ b/www/html/ProductManagement/PM_main.html
@@ -1,5 +1,5 @@
 <!-- html/ProductManagement/PM_main.html -->
-<ons-page id="ProductManagement">
+<ons-page id="PM_main">
   
   <ons-toolbar>
     <div class="left">
