--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
   <script src="js/OrderDisplay/OD_dialog.js"></script>
   <script src="js/OrderLog/OL_main.js"></script>
 
+	<link rel="stylesheet" href="css/Casher.css">
 	<link rel="stylesheet" href="css/ProductManagement.css">
 	<link rel="stylesheet" href="css/OrderDisplay.css">
 
