🐛[ncmb] TranslateIdsToNamesの修正、OrderLogの属性の変更

--- a/www/html/Casher/CA_main.html
+++ b/www/html/Casher/CA_main.html
@@ -8,18 +8,18 @@
 			</ons-toolbar-button>
 		</div>
 		<div class="center">
-			Casher
+			会計
 		</div>
 	</ons-toolbar>
 	<ons-row style="height: 100%;">
 		<!-- 左側の商品ボタンたち -->
 		<ons-col width=70% style="height: 100%; overflow-y: scroll;">
-			<ons-list id="CA_goodsList"></ons-list>
+			<ons-list id="CA_goodsList" style="height: 100%;"></ons-list>
 		</ons-col>
 		<!-- 右側 -->
 		<ons-col width=30% style="height: 100%; overflow-y: scroll;">
 			<!-- カート -->
-			<ons-list id="CA_cart"></ons-list>
+			<ons-list id="CA_cart" style="height: 100%;"></ons-list>
 		</ons-col>
 		<ons-col style="bottom:0px; right:0px; position:fixed; width:30%;">
 				<input type="number" id="CA_totalPrice" readonly style="width: 100%;" class="money">
