--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
 	<link rel="stylesheet" href="css/Casher.css">
 	<link rel="stylesheet" href="css/ProductManagement.css">
 	<link rel="stylesheet" href="css/OrderDisplay.css">
+  <link rel="stylesheet" href="css/OrderLog.css">
 
 	<link rel="stylesheet" href="components/loader.css">
 	<link rel="stylesheet" href="lib/onsenui/css/onsenui.css">
