--- a/www/html/OrderDisplay/OD_dialog.html
+++ b/www/html/OrderDisplay/OD_dialog.html
@@ -7,18 +7,18 @@
     <ons-list-header>商品個数の選択</ons-list-header>
     <ons-list-item modifier="nodivider">
       <div class="center">
-        <ons-button id="ODbutton_1" onclick="OD_selectNum(this.id)">　　 1 　　</ons-button>
+        <ons-button id="OD_button_1" onclick="OD_selectNum(this.id)">　　 1 　　</ons-button>
       </div>
       <div class="right">
-        <ons-button id="ODbutton_2" onclick="OD_selectNum(this.id)">　　 2 　　</ons-button>
+        <ons-button id="OD_button_2" onclick="OD_selectNum(this.id)">　　 2 　　</ons-button>
       </div>
     </ons-list-item>
     <ons-list-item modifier="nodivider">
       <div class="center">
-        <ons-button id="ODbutton_3" onclick="OD_selectNum(this.id)">　　 3 　　</ons-button>
+        <ons-button id="OD_button_3" onclick="OD_selectNum(this.id)">　　 3 　　</ons-button>
       </div>
       <div class="right">
-        <ons-button id="ODbutton_4" onclick="OD_selectNum(this.id)">　　 4 　　</ons-button>
+        <ons-button id="OD_button_4" onclick="OD_selectNum(this.id)">　　 4 　　</ons-button>
       </div>
     </ons-list-item>
     <ons-list-item>
