--- a/www/html/OrderDisplay/OD_dialog.html
+++ b/www/html/OrderDisplay/OD_dialog.html
@@ -23,10 +23,10 @@
     </ons-list-item>
     <ons-list-item>
       <div class="center">
-        <ons-button id="ODbutton_5" onclick="OD_selectNum(this.id)">　　 5 　　</ons-button>
+        <ons-button id="OD_button_5" onclick="OD_selectNum(this.id)">　　 5 　　</ons-button>
       </div>
       <div class="right">
-        <ons-button id="ODbutton_6" onclick="OD_selectNum(this.id)">　　 6 　　</ons-button>
+        <ons-button id="OD_button_6" onclick="OD_selectNum(this.id)">　　 6 　　</ons-button>
       </div>
     </ons-list-item>
     <ons-list-header>キーボードによる個数入力</ons-list-header>
