--- a/www/html/ProductManagement/PM_main.html
+++ b/www/html/ProductManagement/PM_main.html
@@ -24,7 +24,7 @@
 
   <!-- 商品追加ボタンの作成 -->
   <ons-fab position="bottom right">
-    <ons-icon onclick="addProductEdit(-1)" Show Dialog icon="md-plus"></ons-icon>
+    <ons-icon onclick="getID('PM_addButton_1')" Show Dialog icon="md-plus"></ons-icon>
   </ons-fab>
 
 </ons-page>
