--- a/www/index.html
+++ b/www/index.html
@@ -68,7 +68,7 @@
               Home
             </div>
 					</ons-list-item>
-					<ons-list-item onclick="fn.load('html/Casher/Casher.html')" modifier="chevron" tappable>
+					<ons-list-item onclick="fn.load('html/Casher/CA_main.html')" modifier="chevron" tappable>
             <div class="left">
               <img class="list-item__thumbnail" src="image/Casher.png">
             </div>
