--- a/www/index.html
+++ b/www/index.html
@@ -126,6 +126,15 @@
 		<ons-splitter-content id="content" page="html/Home/Home.html">
 		</ons-splitter-content> -->
 	</ons-splitter>
+
+  <ons-modal direction="up">
+  <div style="text-align: center">
+    <p>
+      <ons-icon icon="md-spinner" size="28px" spin></ons-icon> Loading...
+    </p>
+  </div>
+</ons-modal>
+
 </body>
 
 </html>
