--- a/www/html/OrderDisplay/OD_main.html
+++ b/www/html/OrderDisplay/OD_main.html
@@ -9,8 +9,8 @@
     </div>
     <div class="center">注文表示</div>
     <div class="right">
-      <ons-toolbar-button onclick="fn.open()">
-        <ons-icon icon="ion-ios-menu, material:md-menu"></ons-icon>
+      <ons-toolbar-button onclick="loadTable('OD_table','Galley','seatNum');">
+        <ons-icon size="25px" icon="md-spinner"></ons-icon>
        </ons-toolbar-button>
     </div>
   </ons-toolbar>
