--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
 	<!-- <script src="js/OrderDisplay/OD_main.js"></script> -->
   <script src="js/OrderDisplay/OD_dialog.js"></script>
   <script src="js/OrderLog/OL_main.js"></script>
+  <script src="js/OrderLog/OL_dialog.js"></script>
 
 	<link rel="stylesheet" href="css/Casher.css">
 	<link rel="stylesheet" href="css/ProductManagement.css">
