✨[OL_dialog]ページ切り替えで表示

--- a/www/html/Casher/CA_main.html
+++ b/www/html/Casher/CA_main.html
@@ -21,7 +21,7 @@
 			<ons-list id="CA_cart"></ons-list>
 			<!-- </ons-col> -->
 			<!-- <ons-col style="bottom:0px; right:0px; position:fixed; width:30%;"> -->
-			<input type="number" id="CA_totalPrice" readonly class="money">
+			<input type="text" id="CA_totalPrice" readonly class="money">
 			<ons-button id="CA_decideButton" onclick="CA_showSelectSeat()">決定</ons-button>
 			<!-- </ons-col> -->
 		</ons-col>
