--- a/www/html/OrderLog/OL_dialog.html
+++ b/www/html/OrderLog/OL_dialog.html
@@ -3,15 +3,18 @@
 	<ons-list>
 		<ons-list-header>注文情報</ons-list-header>
 		<ons-list-item>
-			<div id="OL_OrderDate" style="width=100%;"></div>
+			<div id="OL_OrderDate" style="width: 100%;"></div>
 		</ons-list-item>
 		<ons-list-item>
-			<div id="OL_seatNum" style="width=100%;"></div>
+			<div id="OL_seatNum" style="width: 100%;"></div>
 		</ons-list-item>
 		<ons-list-header>注文商品情報</ons-list-header>
-		<div id="OL_goodsInfo" style="width=100%;"></div>
+		<div id="OL_goodsInfo" style="width: 100%;"></div>
+		<ons-list-item>
+			<div style="background: red; width: 100%;">aa</div>
+		</ons-list-item>
 		<div style="width=100%; padding: 5px 5px; display: flex;flex-direction: row;flex-wrap: wrap;justify-content: space-around;">
 			<ons-button style="background: red;" onclick="hideDialog(&quot;OL_dialog&quot;)">キャンセル</ons-button>
-			<ons-button style="background: red" onclick="OL_pushEditedData()">決定</ons-button>
+			<ons-button style="background: blue;" onclick="OL_pushEditedData()">　決　定　</ons-button>
 		</div>
 </ons-alert-dialog>
